preparation for changing updatable columns (#161)
Co-authored-by: Michael Hoennig <michael@hoennig.de>
Reviewed-on: https://dev.hostsharing.net/hostsharing/hs.hsadmin.ng/pulls/161
Reviewed-by: Marc Sandlus <marc.sandlus@hostsharing.net>